Added thumbs up and thumbs down buttons. Added new icons for comments.

--- a/src/TipsPage.html
+++ b/src/TipsPage.html
@@ -65,15 +65,72 @@
 				<h1 class="school-title">School Name</h1>
 				<div>
 					<!-- Left-aligned media object -->
-					<div class="media">
+					<div class="media-content">
 						<div class="media-left">
 							<img src="images/avatar1.png" class="media-object"
 								style="width: 60px">
 						</div>
 						<div class="media-body">
-							<h4 class="media-heading">Mark Hammond (ex. Username)</h4>
+							<h4 class="media-heading">Mark Hammond</h4>
 							<p>This will be where the tip goes. I am just adding text
-								here to test out how the text will wrap around. TEST TEST TEST TEST TEST TEST TEST TEST</p>
+								here to test out how the text will wrap around. TEST TEST TEST
+								TEST TEST TEST TEST TEST</p>
+						</div>
+						<div class="media-buttons">
+							<button type="button" class="btn" id="dislike-button"></button>
+							<button type="button" class="btn" id="like-button"></button>
+						</div>
+					</div>
+					<!-- Left-aligned media object -->
+					<div class="media-content">
+						<div class="media-left">
+							<img src="images/avatar2.png" class="media-object"
+								style="width: 60px">
+						</div>
+						<div class="media-body">
+							<h4 class="media-heading">Steve Schultz</h4>
+							<p>This will be where the tip goes. I am just adding text
+								here to test out how the text will wrap around. TEST TEST TEST
+								TEST TEST TEST TEST TEST</p>
+						</div>
+						<div class="media-buttons">
+							<button type="button" class="btn" id="dislike-button"></button>
+							<button type="button" class="btn" id="like-button"></button>
+						</div>
+					</div>
+					<!-- Left-aligned media object -->
+					<div class="media-content">
+						<div class="media-left">
+							<img src="images/avatar6.png" class="media-object"
+								style="width: 60px">
+						</div>
+						<div class="media-body">
+							<h4 class="media-heading">Jacob Trumpis</h4>
+							<p>This will be where the tip goes. I am just adding text
+								here to test out how the text will wrap around. TEST TEST TEST
+								TEST TEST TEST TEST TEST</p>
+						</div>
+						<div class="media-buttons">
+							<button type="button" class="btn" id="dislike-button"></button>
+							<button type="button" class="btn" id="like-button"></button>
+						</div>
+
+					</div>
+					<!-- Left-aligned media object -->
+					<div class="media-content">
+						<div class="media-left">
+							<img src="images/avatar4.png" class="media-object"
+								style="width: 60px">
+						</div>
+						<div class="media-body">
+							<h4 class="media-heading">Corey Kuehl</h4>
+							<p>This will be where the tip goes. I am just adding text
+								here to test out how the text will wrap around. TEST TEST TEST
+								TEST TEST TEST TEST TEST</p>
+						</div>
+						<div class="media-buttons">
+							<button type="button" class="btn" id="dislike-button"></button>
+							<button type="button" class="btn" id="like-button"></button>
 						</div>
 					</div>
 					<hr>
