--- a/src/TipsPage.html
+++ b/src/TipsPage.html
@@ -62,7 +62,7 @@
 
 			<!-- MIDDLE BODY -->
 			<div class="col-sm-8 middle-info text-left">
-				<h1 class="school-title">School Name</h1>
+				<h1 class="school-title">Benedictine University - Computer Science</h1>
 				<div>
 					<!-- Left-aligned media object -->
 					<div class="media-content">
