Took out the remember me checkbox for the sign up page and replaced it with a break tag for a cleaner look.

--- a/src/SignUpPage.html
+++ b/src/SignUpPage.html
@@ -186,10 +186,12 @@
 								<option value="other">Other</option>
 							</select>
 						</div>
-						<div class="checkbox">
-							<label><input type="checkbox" name="remember">
-								Remember me</label>
-						</div>
+						<!-- Don't need this for sign up sheet, just for sign in. -->
+						<!-- <div class="checkbox">-->
+						<!--<label><input type="checkbox" name="remember">-->
+						<!--Remember me</label>-->
+						<!--</div>-->
+						<br>
 						<button type="submit" value="submit" class="btn btn-default">Submit</button>
 					</form>
 				</div>
