--- a/src/SignUpPage.html
+++ b/src/SignUpPage.html
@@ -30,7 +30,7 @@
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="#">Home</a></li>
-					<li><a href="#">Find My School</a></li>
+					<li><a href="FindMySchool.html">Find My School</a></li>
 					<li><a href="#">General Tips</a></li>
 					<li><a href="#">About</a></li>
 					<li><a href="#">FAQ</a></li>
