--- a/src/TipsPage.html
+++ b/src/TipsPage.html
@@ -29,9 +29,9 @@
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="#">Home</a></li>
+					<li><a href="#">Home</a></li>
 					<li><a href="#">Find My School</a></li>
-					<li><a href="#">General Tips</a></li>
+					<li class="active"><a href="#">General Tips</a></li>
 					<li><a href="#">About</a></li>
 					<li><a href="#">FAQ</a></li>
 					<li><a href="#">Contact</a></li>
