--- a/AboutUsPage.html
+++ b/AboutUsPage.html
@@ -45,6 +45,8 @@
 		</div>
 	</nav>
 
+	<!-- End Navbar -->
+	
 	<div class="container-fluid bg-1 text-center">
 		<div class="row content">
 			<!-- LEFT SIDE NAVIGATION -->
