--- a/src/FindMySchool.html
+++ b/src/FindMySchool.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <title>Student Tips</title>
+<link rel="title icon" href="images/icon.png">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="style.css" type="text/css" rel="stylesheet" />
@@ -30,7 +31,7 @@
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="#">Home</a></li>
-					<li><a href="FindMySchool.html">Find My School</a></li>
+					<li class="active"><a href="FindMySchool.html">Find My School</a></li>
 					<li><a href="#">General Tips</a></li>
 					<li><a href="#">About</a></li>
 					<li><a href="#">FAQ</a></li>
