--- a/src/Navbar.html
+++ b/src/Navbar.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>About Us</title>
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="style.css" type="text/css" rel="stylesheet" />
 <link rel="stylesheet"
@@ -11,9 +11,7 @@
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
 </head>
-<body>
 <body>
 
 	<nav class="navbar navbar-inverse">
@@ -29,10 +27,10 @@
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav">
-					<li><a href="#">Home</a></li>
+					<li class="active"><a href="#">Home</a></li>
 					<li><a href="#">Find My School</a></li>
 					<li><a href="#">General Tips</a></li>
-					<li class="active"><a href="#">About</a></li>
+					<li><a href="#">About</a></li>
 					<li><a href="#">FAQ</a></li>
 					<li><a href="#">Contact</a></li>
 				</ul>
@@ -43,50 +41,6 @@
 			</div>
 		</div>
 	</nav>
-
-	<!-- End Navbar -->
-	
-	<div class="container-fluid bg-1 text-center">
-		<div class="row content">
-			<!-- LEFT SIDE NAVIGATION -->
-
-			<div class="col-sm-2 sidenav">
-				<p>
-					<a href="#">Link</a>
-				</p>
-				<p>
-					<a href="#">Link</a>
-				</p>
-				<p>
-					<a href="#">Link</a>
-				</p>
-			</div>
-
-			<!-- MIDDLE BODY -->
-			<div class="col-sm-8 middle-info text-left">
-				<h1>Welcome</h1>
-				<p>This is going to be a brief description of who we are .</p>
-				<hr>
-
-			</div>
-
-			<!-- END FORM -->
-
-			<!-- RIGHT SIDE NAVIGATION -->
-			<div class="col-sm-2 sidenav">
-				<div class="well">
-					<p>ADS</p>
-				</div>
-				<div class="well">
-					<p>ADS</p>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<footer class="container-fluid text-center">
-		<p>Created By Corey Kuehl & Mark Hammond</p>
-	</footer>
 
 </body>
 </html>
